[package]
name = "libarchive-sys"
version = "0.0.1"
authors = ["Nuzhdin Urii aka tz-lom <nuzhdin.urii@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2021"
description="Bindings to system library libarchive"
repository="https://github.com/tz-lom/libarchive-sys"

[dependencies]

[build-dependencies]
cc = "1.0.83"
pkg-config = "0.3.27"
bindgen = { version = "0.68.1", optional = true }

[features]
generate-bindings = ["bindgen"]
doc-only = []

[package.metadata.docs.rs]
features = ["doc-only"]
